@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-03-29T16:20:51Z",
+  "timestamp" : "2022-03-30T01:04:51Z",
   "count_outdated" : 232,
   "uniques_outdated" : 116,
-  "count" : 236,
-  "uniques" : 118,
+  "count" : 237,
+  "uniques" : 119,
   "clones" : [
     {
       "timestamp": "2022-03-16T00:00:00Z",
@@ -14,10 +14,10 @@
     },
     {
       "timestamp": "2022-03-29T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
