@@ -1,6 +1,6 @@
 {
-  "count": 4,
-  "uniques": 2,
+  "count": 5,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2022-03-16T00:00:00Z",
@@ -9,8 +9,8 @@
     },
     {
       "timestamp": "2022-03-29T00:00:00Z",
-      "count": 2,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
